; ModuleID = '/home/carl/AnghaBench/timescaledb/src/bgw_policy/extr_policy.c_ts_bgw_policy_delete_row_only_tuple_found.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/bgw_policy/extr_policy.c_ts_bgw_policy_delete_row_only_tuple_found.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@SCAN_CONTINUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_bgw_policy_delete_row_only_tuple_found(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i32 (...) @ts_catalog_database_info_get()
  %7 = call i32 @ts_catalog_database_info_become_owner(i32 %6, i32* %5)
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @ts_catalog_delete(i32 %10, i32 %13)
  %15 = call i32 @ts_catalog_restore_user(i32* %5)
  %16 = load i32, i32* @SCAN_CONTINUE, align 4
  ret i32 %16
}

declare dso_local i32 @ts_catalog_database_info_become_owner(i32, i32*) #1

declare dso_local i32 @ts_catalog_database_info_get(...) #1

declare dso_local i32 @ts_catalog_delete(i32, i32) #1

declare dso_local i32 @ts_catalog_restore_user(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
